--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>LEARN TO CODE.</h1>
         <h1>LEARN TO BE CREATIVE.</h1>
         <p>Progateはオンラインプログラミング学習サービスです。</p>
-        <p>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+        <p>にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">新規登録はこちら</a>
           <p>or</p>
